# routes/api.php
@@ -4,6 +4,7 @@ use App\Http\Controllers\Api\DirigerLeClubController;
 use App\Http\Controllers\Api\PloAptitudeController;
 use App\Http\Controllers\Api\PloClubController;
 use App\Http\Controllers\Api\PloCompetenceController;
+use App\Http\Controllers\Api\PloEleveController;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\Api\PloFormationController;
 use App\Http\Controllers\Api\PloInitiateurController;
@@ -56,6 +57,11 @@ Route::get('/leader', [DirigerLeClubController::class, "get"]);
 Route::post('/leader', [DirigerLeClubController::class, "create"]);
 Route::put('/leader/{id}', [DirigerLeClubController::class, "update"]);
 Route::delete('/leader/{id}', [DirigerLeClubController::class, "delete"]);
+
+Route::get('/student', [PloEleveController::class, "get"]);
+Route::post('/student', [PloEleveController::class, "create"]);
+Route::put('/student/{id}', [PloEleveController::class, "update"]);
+Route::delete('/student/{id}', [PloEleveController::class, "delete"]);
 
 /*
 |--------------------------------------------------------------------------
